# template

./: .coverage  .flake8  .gitignore  Dockerfile  Makefile  README.md  cookiecutter.json  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: docker-actions.yml  github-actions-demo.yml  project-actions.yml
devdocker/: Dockerfile  Makefile
docker/dev/: Dockerfile  run.sh
docker/dev/install/: config.sh  neovim.sh  package.sh  python.sh
docker/exp/: Dockerfile  run.bash
src/project/: __init__.py
tests/: test_project.py
{{cookiecutter.repo_name}}/: .coverage  .flake8  .gitignore  Dockerfile  README.md  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/: dependabot.yml
{{cookiecutter.repo_name}}/.github/workflows/: docker-actions.yml  docs.yml  project-actions.yml  release-please.yml
{{cookiecutter.repo_name}}/data/: README.md  sample_data.csv
{{cookiecutter.repo_name}}/docs/: README.md  methodlogy.md
{{cookiecutter.repo_name}}/notebooks/: README.md  {{cookiecutter.repo_name}}.sync.ipynb  {{cookiecutter.repo_name}}.sync.py
{{cookiecutter.repo_name}}/requirements/: dev.txt
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  {{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/ETL/: cleaner.py
{{cookiecutter.repo_name}}/tests/: README.md  test_project.py  test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  {{cookiecutter.repo_name}}.py
(+2 files in other folders)
