[metadata]
name = {{cookiecutter.repo_name}}
version = 0.0.1
author = {{cookiecutter.name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.url}}
project_urls =
    Bug Tracker = {{cookiecutter.url}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
